# Toast-text

./: .gitignore  CMakeLists.txt  PROJECT_STATUS.md  README.md
forms/: mainwindow.ui
forms/dialogs/: autocorrectdialog.ui  finddialog.ui  recoverydialog.ui  settingsdialog.ui
include/: contextmenu.h  crashhandler.h  editor.h  filemanager.h  mainwindow.h  sessionmanager.h  splitviewcontainer.h  toolbar.h
include/dialogs/: autocorrectdialog.h  finddialog.h  recoverydialog.h  settingsdialog.h
include/syntax/: syntaxhighlighter.h
resources/: resources.qrc
resources/styles/: dark.qss  light.qss
resources/syntax/: cpp.json  python.json
src/: contextmenu.cpp  crashhandler.cpp  editor.cpp  filemanager.cpp  main.cpp  mainwindow.cpp  sessionmanager.cpp  splitviewcontainer.cpp  toolbar.cpp
src/dialogs/: autocorrectdialog.cpp  finddialog.cpp  recoverydialog.cpp  settingsdialog.cpp
src/syntax/: syntaxhighlighter.cpp
tools/: CMakeLists.txt  download_icons.sh  generate_icons.cpp
